--- a/src/areas/start/1.adoc
+++ b/src/areas/start/1.adoc
@@ -4,7 +4,7 @@
 == Default Content
 
 You are in a large, low-lit, warm room. The floor and walls are soft but firm, 
-with a bit of a bounce. There is a distinctive odor about the place
+with a bit of a bounce. There is a distinctive odor about the place.
 
 
 == Exits
